test/scc/decl/semantic-errors/032.a
032.t:4:5: error: redefinition of 'A'